# wodplanner

./: .dockerignore  .env.example  .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  REFACTOR.md  TODO.md  TODO2.md  TODO3.md  deploy.sh  pyproject.toml  renovate.json
.github/workflows/: ci.yml  claude.yml  docker.yml  opencode.yml  release.yml  renovate.yml
docs/: api.md  database.md  frontend.md  testing.md
docs/adr/: 0001-reverse-engineered-wodapp-api.md  0002-client-side-sessions.md  0003-sqlite.md
examples/: test_client.py
src/wodplanner/: __init__.py
src/wodplanner/api/: __init__.py  client.py
src/wodplanner/app/: __init__.py  config.py  dependencies.py  main.py
src/wodplanner/cli/: __init__.py  add_1rm.py  add_benchmark.py  backup_db.py  import_schedule.py
src/wodplanner/models/: __init__.py  auth.py  benchmark.py  calendar.py  friends.py  google.py  one_rep_max.py  queue.py  schedule.py
src/wodplanner/services/: __init__.py  api_cache.py  base.py  benchmark.py  calendar_sync.py  calendar_view.py  crypto.py  day_card.py  db.py  friend_presence.py  friends.py  google_accounts.py  google_calendar.py  google_oauth.py  login_limiter.py  migrations.py  one_rep_max.py  preferences.py  queue.py  schedule.py  scheduler.py  (+3 more)
tests/: conftest.py
tests/api/: test_client.py  test_client_retry.py
tests/app/: conftest.py  test_config.py  test_dependencies.py  test_dependencies_full.py  test_main.py
tests/cli/: test_add_1rm.py  test_backup_db.py  test_backup_db_main.py  test_import_schedule.py  test_import_schedule_main.py
tests/e2e/: conftest.py  test_appointment_actions.py  test_calendar_nav.py  test_filters.py  test_friends.py  test_login.py  test_mobile.py  test_modals.py  test_one_rep_max.py
tests/models/: test_auth.py  test_calendar.py  test_friends.py  test_one_rep_max.py  test_schedule.py
tests/services/: test_api_cache.py  test_base.py  test_benchmark.py  test_calendar_sync.py  test_calendar_view.py  test_crypto.py  test_day_card.py  test_db.py  test_friend_presence.py  test_friends.py  test_friends_migration.py  test_google_accounts.py  test_google_calendar.py  test_google_oauth.py  test_login_limiter.py  test_migrations.py  test_one_rep_max.py  test_preferences.py  test_schedule.py  test_schedule_lookup.py  test_session.py  test_subscription.py
tests/utils/: test_dates.py
(+38 files in other folders)
