[project]
name = "wodplanner"
version = "0.1.0"
description = "Custom frontend and auto-signup for WodApp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "itsdangerous>=2.0.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.7",
]

[project.scripts]
import-schedule = "wodplanner.cli.import_schedule:main"
backup-db = "wodplanner.cli.backup_db:main"
add-1rm = "wodplanner.cli.add_1rm:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wodplanner" = ["app/static/**/*", "app/templates/**/*"]
