[project]
name = "wodplanner"
version = "0.2.0"
description = "Custom frontend and auto-signup for WodApp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "wsproto>=1.2.0",
    "itsdangerous>=2.0.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.7",
]

[project.scripts]
import-schedule = "wodplanner.cli.import_schedule:main"
backup-db = "wodplanner.cli.backup_db:main"
add-1rm = "wodplanner.cli.add_1rm:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end browser tests (run with: pytest tests/e2e/)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wodplanner" = ["app/static/**/*", "app/templates/**/*"]
